# trakatui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
manual/: pattern_editor.md
src/: app.rs  audio.rs  export.rs  keybindings.rs  keys.rs  main.rs  pattern.rs  scale.rs  synth.rs  ui.rs
src/app/: input.rs  keybindings.rs  mod.rs  playback.rs  scale.rs
src/audio/: export.rs  mixer.rs  mod.rs  sampler.rs  synth.rs
src/project/: channel.rs  file.rs  mod.rs  mod_file.rs  pattern.rs  sample.rs  xm.rs
src/ui/: about_modal.rs  arranger.rs  commands_ref.rs  controls_modal.rs  footer.rs  header.rs  instrument.rs  mod.rs  order_bar.rs  pattern.rs  settings_panel.rs  sidebar.rs  track.rs  widgets.rs
website/: index.html
