[package]
name = "psikat"
version = "0.3.0"
edition = "2024"
publish = false
authors = ["holoflash"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
fastrand = "2.3.0"
hound = "3.5.1"
dirs = "6"
rfd = "0.17"
rodio = "0.22.1"

[lints.clippy]
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
